--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "ct3aMetadata": {
