--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^7.0.2",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
+    "dotenv": "^16.4.5",
     "eslint-config-next": "^14.1.0",
     "pg": "^8.11.3",
     "postcss": "^8.4.34",
