--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "db:drop": "drizzle-kit drop",
     "db:pull": "drizzle-kit introspect:pg",
     "db:check": "drizzle-kit check:pg",
-    "dev": "next dev",
+    "dev": "next dev -p 3010",
+    "test": "vitest",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@lucia-auth/adapter-drizzle": "^1.0.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -31,7 +33,8 @@
     "drizzle-orm": "^0.29.4",
     "lucia": "^3.1.1",
     "lucide-react": "^0.356.0",
-    "next": "^14.1.0",
+    "negotiator": "^0.6.3",
+    "next": "^14.2.4",
     "oslo": "^1.1.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
@@ -43,27 +46,32 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "@types/eslint": "^8.56.2",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20.11.20",
     "@types/pg": "^8.11.3",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
+    "@vitejs/plugin-react": "^4.3.1",
+    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
-    "dotenv": "^16.4.5",
     "eslint-config-next": "^14.1.0",
+    "jsdom": "^24.1.0",
     "pg": "^8.11.3",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.6.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.28.0"
   },
-  "packageManager": "pnpm@8.14.1"
+  "packageManager": "pnpm@9.0.6"
 }
